# DasiaAIO-Backend

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  cleanup_corrupted_users.sql  cleanup_direct.js  cleanup_simple.js  cleanup_users.js  cleanup_users.sql  docker-compose.yml  generate_hash.js  package-lock.json  package.json  railway.json  seed.js  seed_guards.sql
.github/workflows/: ci.yml
migrations/: add_ai_operational_intelligence.sql  add_feedback_system.sql  add_guard_shift_swaps.sql  add_mdr_integration.sql  add_password_reset_tokens.sql
scripts/: RAILWAY_LIVE_ACCOUNT_RUNBOOK.md  railway_live_account_provision.sql
src/: config.rs  db.rs  error.rs  main.rs  models.rs  utils.rs
src/handlers/: ai.rs  alerts.rs  analytics.rs  armored_cars.rs  audit.rs  auth.rs  clients.rs  feedback.rs  firearm_allocation.rs  firearm_maintenance.rs  firearms.rs  guard_assignments.rs  guard_replacement.rs  health.rs  incidents.rs  legal.rs  mdr.rs  merit.rs  missions.rs  mod.rs  notifications.rs  permits.rs  shift_swap.rs  support_tickets.rs  system.rs  tracking.rs  training.rs  trip_management.rs  users.rs
src/middleware/: audit.rs  authz.rs  mod.rs  presence.rs  rate_limit.rs  request_timeout.rs  security_headers.rs
src/services/: geofence_alert_service.rs  guard_prediction_service.rs  incident_ai_classifier.rs  incident_summary_service.rs  mdr_import_service.rs  mod.rs  replacement_ai_service.rs  vehicle_predictive_service.rs
tests/: tracking_audit_integration.rs  tracking_release_blocker_integration.rs
